<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveTextBackground</string>
    <string name="app_desc">Allows a live text background with customizable features like collision, etc.</string>
    <string name="livetextbackground_settings">Live Text Background Settings</string>
    
    <string name="label_settings_category_text">Text</string>
    
    <string name="label_settings_text_label">Displayed Text</string>
    <string name="label_settings_text_desc">The entries of text to be used to display on the background.</string>
    <string name="label_settings_text_default">Example|Another Example</string>
    
    <string name="label_settings_text_size_variance_label">Text Size Range</string>
    <string name="label_settings_text_size_variance_desc">The minimum to maximum range of the text size.</string>
    <integer name="label_settings_text_size_min">2</integer>
    <integer name="label_settings_text_size_max">50</integer>
    <integer name="label_settings_text_size_default_min">8</integer>
    <integer name="label_settings_text_size_default_max">22</integer>
    
    <string name="label_settings_collision_label">Collision</string>
    <string name="label_settings_collision_desc">Allows a collision check with a particle effect.</string>
    <bool name="label_settings_collision_default">true</bool>
    
    <string name="label_settings_shadow_layer_label">Shadow Layer</string>
    <string name="label_settings_shadow_layer_desc">Casts a shadow on the text and particles.</string>
    <bool name="label_settings_shadow_layer_default">true</bool>
    
    <string name="label_settings_category_background">Background</string>
    <string name="label_settings_background_color">Color</string>
    <string name="label_settings_background_image_label">Image</string>
    <string name="label_settings_background_image_desc">Allows you to choose an image.</string>
    <string name="label_settins_select_an_image">Select an Image</string>
    <string name="label_settins_use_background_image_label">Use Image</string>
    <string name="label_settins_use_background_image_desc">If enabled, it\'ll use the desired image, otherwise it\'ll use the color desired.</string>
    <bool name="label_settings_background_enabled">false</bool>
    <string name="label_settings_background_image_mode_label">Background Mode</string>
    <string name="label_settings_background_image_mode_desc">Pick how you would like the background to be displayed, positioning/scaling.</string>
    <string name="label_settings_background_image_mode_preview_label">Background Mode Preview:</string>
    <string-array name="label_settings_background_image_modes">
        <item>Center</item>
        <item>Fill</item>
        <item>Fit</item>
        <item>Stretch</item>
        <item>Tile</item>
    </string-array>
    <string name="label_settings_background_image_modes_default">Center</string>
    
    <string name="label_settings_category_advanced">Advanced</string>
    <string name="label_settings_desired_fps_label">FPS</string>
    <string name="label_settings_desired_fps_desc">The desired frames per second.</string>
    <integer name="label_settings_desired_fps_default_min">1</integer>
    <integer name="label_settings_desired_fps_default_max">100</integer>
    <integer name="label_settings_desired_fps_default">30</integer>
    
    <string name="label_settings_text_minimum_preview">Minimum</string>
    <string name="label_settings_text_maximum_preview">Maximum</string>
    
    <string name="toast_error_loading_preferences">Error Loading Preferences&#8230;\nReturned all to default.</string>
    <string name="toast_fatal_error_loading_preferences">Fatal Error Loading Preferences\nCan\'t continue!</string>
    <string name="toast_no_image_picker_activity_found">Could not open an image picker&#8230;</string>
    <string name="toast_could_not_load_image_picker_data">Could not open image&#8230;?</string>
    
    <string name="label_settings_text_array_entry_remove">Remove</string>
    <string name="label_settings_text_array_entry_add">New Entry</string>
    
    <string name="placeholder_min_max_bar_default_fps">0 FPS</string>
    <string name="placeholder_min_max_bar_default_dp">0px</string>
    
    <string name="placeholder_not_yet_implemented">Not yet finished/implemented.\nPut off indefinitely&#8230;</string>
</resources>